# parakeet-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CONVERT_MODEL.md
.github/workflows/: rust.yml
examples/: diarization_8spk.rs  raw.rs  streaming.rs  streaming_diarization.rs  unified.rs
plans/: BEAM_SEARCH_IMPLEMENTATION_PLAN.md  WEBGPU_IMPLEMENTATION_PLAN.md
samples/smoke/: test01_20s_transcript.txt
scripts/: export_diar_sortformer.py  export_nemotron_streaming.py  export_ultra_diar_8spk.py  quantize_nemotron_streaming.py
scripts/benchmark/: compare_greedy_beam.py  manifest.toml  run_all.sh
src/: decoder.rs  execution.rs  lib.rs  model_tdt.rs  multitalker.rs  nemotron.rs  parakeet.rs  parakeet_tdt.rs  parakeet_unified.rs  sortformer.rs
src/decoding/: ctc_beam.rs  mod.rs  rnnt_beam.rs  tdt_beam.rs
tests/: model_benchmark.rs
tests/common/: mod.rs
